force-app/main/default/objects/Related_Ethics_Applications__c/Related_Ethics_Applications__c.object-meta.xml
<CustomObject>
    <label>Related Ethics Application</label>
    <nameField>
        <displayFormat>REA-{000000}</displayFormat>
        <label>Related Ethics Application</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Ethics Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>