force-app/main/default/objects/Related_Ethics_Applications__c/fields/I_RS_Date_Added__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Added__c</fullName>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>