force-app/main/default/objects/Related_Ethics_Applications__c/fields/I_RS_Ethics_Request__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ethics Request</label>
    <referenceTo>Ethics_Request__c</referenceTo>
    <relationshipName>Related_Ethics_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>