force-app/main/default/objects/Related_Ethics_Applications__c/fields/I_RS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>