force-app/main/default/objects/Related_Ethics_Applications__c/fields/I_RS_Parent_Application_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Application_Record_Type__c</fullName>
    <formula>I_RS_Parent_Ethics_Request__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Application Record Type</label>
    <type>Text</type>
</CustomField>