force-app/main/default/objects/Related_Ethics_Applications__c/fields/I_RS_Parent_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Application_Status__c</fullName>
    <formula>TEXT(I_RS_Parent_Ethics_Request__r.I_RS_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Application Status</label>
    <type>Text</type>
</CustomField>