force-app/main/default/objects/Related_Ethics_Applications__c/fields/I_RS_Parent_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Approval_Date__c</fullName>
    <formula>I_RS_Parent_Ethics_Request__r.I_RS_Ethics_Application_Approval_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Approval Date</label>
    <type>Date</type>
</CustomField>