force-app/main/default/objects/Related_Ethics_Applications__c/fields/I_RS_Parent_Ethics_Request__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Ethics_Request__c</fullName>
    <label>Parent Ethics Request</label>
    <referenceTo>Ethics_Request__c</referenceTo>
    <relationshipLabel>Ethics Applications/SOPs</relationshipLabel>
    <relationshipName>Related_Ethics_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>