force-app/main/default/objects/Related_Ethics_Applications__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <description>Status of the ethics for this project proposal</description>
    <formula>TEXT(I_RS_Project_Proposal__r.I_RS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>