force-app/main/default/objects/Related_Ethics_Applications__c/fields/Related_Application_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Related_Application_Approval_Date__c</fullName>
    <formula>I_RS_Related_Ethics_Application__r.I_RS_Ethics_Application_Approval_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Application Approval Date</label>
    <type>Date</type>
</CustomField>