force-app/main/default/objects/Related_Ethics_Applications__c/fields/Related_Application_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Application_Record_Type__c</fullName>
    <formula>I_RS_Related_Ethics_Application__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Application Record Type</label>
    <type>Text</type>
</CustomField>