force-app/main/default/objects/Related_Ethics_Applications__c/fields/Related_Application_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Related_Application_Review_Outcome__c</fullName>
    <formula>TEXT(I_RS_Related_Ethics_Application__r.I_RS_Ethics_Application_Review_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Application Review Outcome</label>
    <type>Text</type>
</CustomField>