force-app/main/default/objects/Related_Ethics_Applications__c/fields/Related_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Application_Status__c</fullName>
    <formula>TEXT(I_RS_Related_Ethics_Application__r.I_RS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Application Status</label>
    <type>Text</type>
</CustomField>