force-app/main/default/objects/Related_Ethics_Applications__c/validationRules/End_Date_greater_to_Start_Date_Related_E.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_greater_to_Start_Date_Related_E</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(I_RS_End_Date__c)) &amp;&amp;
I_RS_End_Date__c &lt;  I_RS_Date_Added__c</errorConditionFormula>
    <errorDisplayField>I_RS_End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before Date Added</errorMessage>
</ValidationRule>