force-app/main/default/objects/Related_Ethics_Applications__c/validationRules/Parent_and_Related_Cannot_be_the_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_and_Related_Cannot_be_the_same</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(I_RS_Parent_Ethics_Request__c)) &amp;&amp;  NOT(ISBLANK(I_RS_Related_Ethics_Application__c)) &amp;&amp;
I_RS_Parent_Ethics_Request__c = I_RS_Related_Ethics_Application__c</errorConditionFormula>
    <errorMessage>Related Ethics Application cannot be the same with the Parent Ethics Request. Please select another record.</errorMessage>
</ValidationRule>